--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar" [ngClass]="{ 'sidebar-collapsed': isSidebarCollapsed }">
   <div class="sidebar-header">
     <a href="#" class="sidebar-logo">{{
-      isSidebarCollapsed ? 'C' : 'CodeWithChintan'
+      isSidebarCollapsed ? 'C' : 'SideBar'
     }}</a>
   </div>
   <div class="sidebar-menu">
