--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,5 +1,50 @@
-.sidebar { 
-    display: flex;
-    flex-direction: column;
-    align-items: ;
+.sidebar-container{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.sidebar-content{
+  width: 200px;
+  height: 100vh;
+  background-color: rgb(41, 86, 155);
+  color: rgb(255, 255, 255);
+  padding: 20px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3s ease-in-out;
+}
+
+
+.sidebar-content ul{
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar-content li {
+  margin-bottom: 10px;
+}
+
+.sidebar-content a{
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  display: block;
+  padding: 5px 0;
+}
+
+.sidebar-content a:hover{
+ color:rgb(255, 251, 0)
+}
+
+.toggle-button {
+  background-color: rgb(41, 86, 155);
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  display: flex;
+  padding: 5px;
+  width: 11.5%;
+  border-radius: 20px;
+}
+
+.toggle-button:hover{
+  background-color: rgb(0, 36, 59);
 }
