--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,16 +1,13 @@
-<div class = "dashboard-container">
-  <div class="position-relative">
-      <app-sidebar
-      [isSidebarCollapsed]="isSidebarCollapsed"
-      (sidebarToggle) ="onSidebarToggle()">
-      </app-sidebar>
-      <button class="sidebar-toggle-btn" [ngClass]="{'sidebar-collapsed': isSidebarCollapsed}"
-      (click)="onSidebarToggle()">
-      <i [class]="isSidebarCollapsed ? 'fas fa-arrow-right' : 'fas fa-arrow-left'">
-      </i>
-      </button>
+<div class="dashboard-container">
+  <div class="area-conteudo">
+    <app-sidebar>
+    </app-sidebar>
+    <div class="conteudo">
+
+    </div>
   </div>
-  <main class="content" [ngClass]="{ 'content-expanded' : isSidebarCollapsed}">
-    <div class="content-inner"> Conteudo aqui </div>
-  </main>
+
+
+
 </div>
+
