Melhora sidebar e inclusão do componente home

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar-container">
   <button (click)="toggleSidebar()" class="toggle-button">
-    {{isOpened ? '' : 'Abrir Menu'}}
+    {{isOpened ? '' : ''}}
   </button>
 <div *ngIf="isOpened" class="sidebar-content">
   <h3>Navegação</h3>
