--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -12,6 +12,7 @@
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s ease-in-out;
+
 }
 
 
@@ -41,8 +42,9 @@
   cursor: pointer;
   display: flex;
   padding: 5px;
-  width: 11.5%;
-  border-radius: 20px;
+  width: 20;
+  border-radius: 10px;
+  padding: 10px
 }
 
 .toggle-button:hover{
