--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
       <a href="#">Início</a>
     </li>
      <li>
-      <a href="#">Dashboard</a>
+      <a href="dashboard">Dashboard</a>
     </li>
      <li>
       <a href="#">Configurações</a>
