--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -3,6 +3,13 @@
     <app-sidebar>
     </app-sidebar>
     <div class="conteudo">
+
+      <div class="card">
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+    </div>
+
     </div>
   </div>
 </div>
