--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,6 +3,7 @@
     {{isOpened ? '' : ''}}
   </button>
 <div *ngIf="isOpened" class="sidebar-content">
+  <img class="logo" src="assets/documentos.jpg" alt="logo" aria-hidden="true">
   <h3>Navegação</h3>
   <ul>
     <li>
