--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,2 +1,20 @@
+app-widget{
+  border: 1px solid black;
+}
 
+.dashboard-widgets{
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px));
+  gap: 16px;
 
+}
+
+.header{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h2{
+  padding-left:20px;
+}
