--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -5,15 +5,13 @@
        [routerLink]="['/dashboard']"
           routerLinkActive="active"
           class="nav-link">
-        <i class="material-icons">home</i>HOME
+        <i class="material-icons">dashboard</i>Dashboard
       </a>
       <a mat-list-item
         [routerLink]="['/card']"
           routerLinkActive="active"
-          class="nav-link"
-
-      >
-        <i class="material-icons">work</i>Técnico
+          class="nav-link">
+        <i class="material-icons">notes</i>Cards
       </a>
       <a mat-list-item routerLink="/">
         <i class="material-icons">person_search</i>Cliente
