--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class = "container-header">
   <img src="assets/documentoslogo.png" alt="logo" class="imagem">
-    <h1>Documentos App</h1>
+    <h1>App Sat</h1>
 </div>
