--- a/src/app/pages/dashboardpage/dashboardpage.component.html
+++ b/src/app/pages/dashboardpage/dashboardpage.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="main-content">
+    <h1><strong>Dashboard</strong></h1>
   <div class="dashboard">
     <app-dashboard></app-dashboard>
   </div>
