--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,12 @@
 <app-header></app-header>
 <div class="home-container">
-  <div class="area-conteudo">
+  <div class="content-area">
     <app-sidenav (linkClicked)="closeSidenav()"></app-sidenav>
-
-    <div class="incio">
-      <h2 class="texto-vindas">Bem-vindo ao Portal Nova Sat Training !!!</h2>
-      <div class="conteudo">
-        <router-outlet></router-outlet>
+      <div class="content">
+        <router-outlet/>
 
     </div>
 
-    </div>
 
   </div>
 
