--- a/src/app/pages/creationcardpage/creationcardpage.component.html
+++ b/src/app/pages/creationcardpage/creationcardpage.component.html
@@ -1,1 +1,6 @@
-<p>creationcardpage works!</p>
+<div class="container">
+   <!-- Componente para criar novos cards -->
+      <div class="create-card-section">
+        <app-create-card></app-create-card>
+      </div>
+</div>
