--- a/src/app/components/create-card/create-card.component.css
+++ b/src/app/components/create-card/create-card.component.css
@@ -4,6 +4,7 @@
   border-radius: var(--radius-md);
   box-shadow: var(--shadow-sm);
   margin-bottom: var(--spacing-lg);
+  width: 1000px;
 }
 /* Estilo para os Radio Buttons */
 .radio-group {
