--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -9,18 +9,26 @@
         <a mat-list-item [routerLink]="['']" routerLinkActive="active" class="nav-link">
           <i class="material-icons">dashboard</i>Dashboard
         </a>
+
+         <a mat-list-item [routerLink]="['/cards']" routerLinkActive="active" class="nav-link">
+          <i class="material-icons">notes</i>Cards
+        </a>
+
+           <a mat-list-item [routerLink]="['/cards-create']" routerLinkActive="active" class="nav-link">
+          <i class="material-icons">add</i>Criação de Cards
+        </a>
+        
         <!-- Link para a página Sobre -->
         <a mat-list-item [routerLink]="['/about']" routerLinkActive="active" class="nav-link">
-          <i class="material-icons">info</i>About
+          <i class="material-icons">info</i>Sobre
         </a>
         <!-- Link para a página de Contato -->
         <a mat-list-item [routerLink]="['/contact']" routerLinkActive="active" class="nav-link">
-          <i class="material-icons">contact_page</i>Contact
+          <i class="material-icons">contact_page</i>Contato
         </a>
 
-         <a mat-list-item [routerLink]="['/cards']" routerLinkActive="active" class="nav-link">
-          <i class="material-icons">contact_page</i>Cards
-        </a>
+
+
       </mat-nav-list>
     </mat-drawer>
 
