--- a/src/app/pages/creationcardpage/creationcardpage.component.html
+++ b/src/app/pages/creationcardpage/creationcardpage.component.html
@@ -1,6 +1,10 @@
 <div class="container">
-   <!-- Componente para criar novos cards -->
-      <div class="create-card-section">
-        <app-create-card></app-create-card>
-      </div>
+  <div class="content">
+    <h1>Criar novo Card</h1>
+
+    <!-- Componente para criar novos cards -->
+    <div class="create-card-section">
+      <app-create-card></app-create-card>
+    </div>
+  </div>
 </div>
