--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,7 @@
   --text-light: #d0d0d0;
   --background-light: #000000;
   /* Page Black */
-  --white: #333333;
+  --white: #ffffff;
   /* Map white to dark gray for general containers if needed, but prefer card-bg */
   --sidebar-bg: #0d1b2a;
   /* Very Dark Blue */
