--- a/src/app/pages/contactpage/contactpage.component.css
+++ b/src/app/pages/contactpage/contactpage.component.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: var(--spacing-xl);
   background-color: var(--background-light);
-  min-height: 100%;
+  background-color: rgb(26, 36, 59);
 }
 
 .content {
