--- a/src/app/pages/dashboardpage/dashboardpage.component.css
+++ b/src/app/pages/dashboardpage/dashboardpage.component.css
@@ -37,7 +37,7 @@
 
 /* (Opcional) Se quiser garantir que o flex não bagunce */
 .main-content {
-  background-color: var(--dashboard-container-bg);
+  box-shadow: 20px;
   align-items: center;
   margin: 20px;
   padding: 20px;
