--- a/src/app/pages/aboutpage/aboutpage.component.css
+++ b/src/app/pages/aboutpage/aboutpage.component.css
@@ -4,15 +4,15 @@
   align-items: center;
   padding: var(--spacing-xl);
   background-color: var(--background-light);
-  background-color: rgb(26, 36, 59);;
+  background-color: rgb(26, 36, 59);
+  border-radius: 20px;
 }
 
 .content {
+  border-radius: 20px;
   max-width: 900px;
   width: 1000px;
   background-color: var(--card-bg);
-  border-radius: var(--radius-lg);
-  box-shadow: var(--shadow-md);
   padding: var(--spacing-xl);
 }
 
