Troca de tema da tela de login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,13 @@
+ <div class="themes">
+ <label class="theme-switch">
+    <input type="checkbox" [checked]="isDarkTheme" (change)="toggleTheme()">
+    <span class="slider round">
+      <span class="icon sun">☀️</span>
+      <span class="icon moon">🌙</span>
+    </span>
+  </label>
+  </div>
+
 <div class="login-container">
   <div class="login-card">
     <h2>Login</h2>
