--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -4,6 +4,15 @@
   align-items: center;
   height: 100vh;
   background-color: var(--background-light);
+  flex-direction: column;
+  gap: 20px;
+  
+}
+
+.themes{ 
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 
 .login-card {
@@ -29,6 +38,79 @@ label {
   display: block;
   margin-bottom: 0.5rem;
   color: var(--text-light);
+}
+
+/* Theme Switch Styles */
+.theme-switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  
+}
+
+.theme-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ff5722;
+  /* Orange for Sun/Light */
+  transition: .4s;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 5px;
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .4s;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+input:checked+.slider {
+  background-color: #2c3e50;
+  /* Dark for Moon/Dark */
+}
+
+input:checked+.slider:before {
+  transform: translateX(26px);
+}
+
+.icon {
+  font-size: 14px;
+  z-index: 1;
+  user-select: none;
+}
+
+.sun {
+  color: white;
+  margin-left: 4px;
+}
+
+.moon {
+  color: white;
+  margin-right: 4px;
 }
 
 input {
