--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -6,10 +6,9 @@
   background-color: var(--background-light);
   flex-direction: column;
   gap: 20px;
-  
 }
 
-.themes{ 
+.themes{
   position: absolute;
   top: 20px;
   right: 20px;
@@ -22,6 +21,17 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 400px;
+}
+
+.footer-container {
+  margin-top: 20px;
+  width: 100%;
+  text-align: center;
+  padding: 10px 0;
+  background-color: var(--card-bg);
+  border-radius: 0 0 8px 8px;
+  box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+
 }
 
 h2 {
@@ -46,7 +56,7 @@ label {
   display: inline-block;
   width: 60px;
   height: 34px;
-  
+
 }
 
 .theme-switch input {
