--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -30,6 +30,7 @@
   height: clamp(30px, 10vw, 50px);
   width: auto;
   object-fit: contain;
+  border-radius: 100px;
 }
 
 /* Theme Switch Styles */
