--- a/src/app/components/usuarios-list/usuarios-list.component.css
+++ b/src/app/components/usuarios-list/usuarios-list.component.css
@@ -1,4 +1,10 @@
 /* Table Styles */
+.table-responsive {
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
