Pequenas mudanças em usuários

--- a/src/app/pages/usuariospage/usuariospage.component.css
+++ b/src/app/pages/usuariospage/usuariospage.component.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   padding: var(--spacing-xl);
   background-color: var(--background-light);
   min-height: 100%;
