--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -48,6 +48,8 @@ mat-card-title {
 }
 
 .card-value {
+  display: flex;
+  justify-content: end;
   margin: 5px 0 0 0;
   font-weight: bold;
   font-size: 1.6rem;
