Leve melhora sidenav

--- a/src/app/components/sidenav/sidenav.component.css
+++ b/src/app/components/sidenav/sidenav.component.css
@@ -12,6 +12,10 @@ button {
   color: var(--text-color) !important;
 }
 
+.toggle-btn {
+  color: white !important;
+}
+
 .nav-list {
   display: flex;
   flex-direction: column;
