--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -46,7 +46,7 @@
     <!-- Conteúdo principal ao lado do Sidenav -->
     <div class="sidenav-content">
       <!-- Botão para alternar a visibilidade do Sidenav (abrir/fechar) -->
-      <button mat-icon-button (click)="toggleSidebar()">
+      <button mat-icon-button class="toggle-btn" (click)="toggleSidebar()">
         <!-- Ícone de seta que muda dependendo do estado (aberto/fechado) -->
         @if (showFiller) {
         <i class="material-icons">chevron_right</i>
