--- a/src/app/pages/dashboardpage/dashboardpage.component.css
+++ b/src/app/pages/dashboardpage/dashboardpage.component.css
@@ -14,7 +14,7 @@
   max-width: 1200px;
   margin: 0 auto;
   /* Center content */
-  background-color: rgb(26, 36, 59);
+  background-color: #333333;
   border-radius: 20px;
   padding: 20px;
   box-sizing: border-box;
